# docs/swagger.json
@@ -1,14 +1,122 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "Микросервис для управления заказами в системе MixFood.",
-        "title": "MixFood Order Service API",
+        "description": "API для управления заказами",
+        "title": "Mixfood Order Service API",
         "contact": {},
         "version": "1.0"
     },
-    "host": "localhost:8082",
+    "host": "localhost:8083",
     "basePath": "/",
     "paths": {
+        "/api/v1/admin/orders": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "admin"
+                ],
+                "summary": "Получение всех заказов (для админа)",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Лимит",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Смещение",
+                        "name": "offset",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/github_com_ssklv_mixfood-order-service_internal_domain.Order"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/admin/orders/{id}/status": {
+            "patch": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Только для администраторов",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "admin"
+                ],
+                "summary": "Обновление статуса заказа",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID заказа",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Новый статус",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/github_com_ssklv_mixfood-order-service_internal_domain.UpdateStatusInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/orders": {
             "get": {
                 "description": "Возвращает историю заказов текущего авторизованного пользователя с пагинацией",
@@ -49,7 +157,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/domain.Order"
+                                "$ref": "#/definitions/github_com_ssklv_mixfood-order-service_internal_domain.Order"
                             }
                         }
                     },
@@ -99,7 +207,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/domain.CreateOrderInput"
+                            "$ref": "#/definitions/github_com_ssklv_mixfood-order-service_internal_domain.CreateOrderInput"
                         }
                     }
                 ],
@@ -107,7 +215,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/domain.Order"
+                            "$ref": "#/definitions/github_com_ssklv_mixfood-order-service_internal_domain.Order"
                         }
                     },
                     "400": {
@@ -142,21 +250,24 @@
         }
     },
     "definitions": {
-        "domain.CreateOrderInput": {
+        "github_com_ssklv_mixfood-order-service_internal_domain.CreateOrderInput": {
             "type": "object",
             "properties": {
                 "address_id": {
                     "type": "integer"
                 },
+                "delivery_time": {
+                    "type": "string"
+                },
                 "items": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/domain.OrderItem"
+                        "$ref": "#/definitions/github_com_ssklv_mixfood-order-service_internal_domain.OrderItem"
                     }
                 }
             }
         },
-        "domain.Order": {
+        "github_com_ssklv_mixfood-order-service_internal_domain.Order": {
             "type": "object",
             "properties": {
                 "address_id": {
@@ -165,13 +276,16 @@
                 "created_at": {
                     "type": "string"
                 },
+                "delivery_time": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "integer"
                 },
                 "items": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/domain.OrderItem"
+                        "$ref": "#/definitions/github_com_ssklv_mixfood-order-service_internal_domain.OrderItem"
                     }
                 },
                 "status": {
@@ -188,7 +302,7 @@
                 }
             }
         },
-        "domain.OrderItem": {
+        "github_com_ssklv_mixfood-order-service_internal_domain.OrderItem": {
             "type": "object",
             "properties": {
                 "id": {
@@ -207,6 +321,21 @@
                     "type": "integer"
                 }
             }
+        },
+        "github_com_ssklv_mixfood-order-service_internal_domain.UpdateStatusInput": {
+            "type": "object",
+            "properties": {
+                "status": {
+                    "type": "string"
+                }
+            }
+        }
+    },
+    "securityDefinitions": {
+        "CookieAuth": {
+            "type": "apiKey",
+            "name": "jwt",
+            "in": "cookie"
         }
     }
 }
